--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "beauty-docs",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
+  "homepage": "https://beauty-framework.github.io/",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
